bridges/jac-bridge/tests/ui/assoc_with_receiver.stderr
error: #[jac(assoc)] marks a no-receiver associated function; this fn has a `self` receiver
  --> tests/ui/assoc_with_receiver.rs:18:16
   |
18 |         pub fn other(&self) -> bool {
   |                ^^^^^
